update: improve loading PDF display

--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -98,6 +98,7 @@ block content
 
   <div id="pdf-loading-loop">
     <div class="loader-container">
+      <div id="pdf-loading-loop-infos"></div>
       <div class="loader"></div> 
     </div>
   </div>
