--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -24,6 +24,18 @@ body {
   background-color: white;
 }
 
+#pdf-loading-loop-infos {
+  z-index: 100000;
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  width: 60%;
+  height: 100px;
+  font-size: 3em;
+  font-weight: bold;
+  text-align: center;
+}
+
 #pdf-loading-loop .loader-container {
   width: 100%;
   height: 100%;
