--- a/views/captcha.pug
+++ b/views/captcha.pug
@@ -1,3 +1,3 @@
-script(src="https://www.google.com/recaptcha/api.js?render=" + conf._reCAPTCHA_site_key_)
+script(src="https://www.google.com/recaptcha/api.js?render=" + conf._reCAPTCHA_site_key_.public)
 script(src=conf.root + "javascripts/captcha.js")
-div.hidden#_reCAPTCHA_site_key_ #{conf._reCAPTCHA_site_key_}
+div.hidden#_reCAPTCHA_site_key_ #{conf._reCAPTCHA_site_key_.public}
