update: refere to issue https://github.com/DataSeer/dataseer-web/issues/84

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -364,9 +364,15 @@ i {
 #dataset-form .form-row input {
   display: inline-block;
 }
+
 #dataset-form .form-row select {
   display: inline-block;
   width: 75%;
+}
+
+#dataset-form .form-row input[type="checkbox"] {
+  display: inline-block;
+  width: 25px;
 }
 
 /*document-view*/
