fix: fix issue https://github.com/DataSeer/dataseer-web/issues/275#issuecomment-823677907

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -508,6 +508,8 @@ i {
 }
 
 #datasets-list .form-row > .item {
+  padding-right: 5px;
+  padding-left: 5px;
   display: block;
   margin-bottom: 8px;
 }
