--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -599,6 +599,9 @@ i {
 }
 
 #datasets-list .form-row button {
+  padding-bottom: 1px;
+  min-height: 22px;
+  min-width: 22px;
   display: inline-block;
   margin-left: 4px;
   margin-right: 4px;
