update: c.f. https://github.com/DataSeer/dataseer-web/issues/273#issuecomment-824378616

--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -365,6 +365,7 @@ i {
 }
 
 #dataset-form .form-row button div {
+  font-family: "Open Sans", "Lucida Grande", Helvetica, sans-serif;
   font-weight: normal;
   margin-left: 5px;
   display: inline;
