--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -91,7 +91,7 @@ block content
         if current_user
             if document
               if document.status !== 'metadata'
-                button(id='back_to_metadata' class='btn btn-primary' style='height:80%;line-height: 0;') Metadata
+                button(id='back_to_metadata' class='btn btn-primary' style='height:80%;line-height: 0;') Back to Metadata
         button(id='datasets_validation' class='btn btn-primary' style='height:80%;line-height: 0;') Finish all Datasets
 
             
