--- a/views/modals/documents/datasets.pug
+++ b/views/modals/documents/datasets.pug
@@ -20,6 +20,7 @@ div(class='modal fade' id='datasets-confirm-modal' tabindex='-1' role='dialog' a
         h5(class='modal-title' id='datasets-confirm-modal-label') #Title
         button.blue.btn.btn-primary.waves-effect.waves-light(type='button' class='close' data-dismiss='modal' aria-label='Close')
           span(aria-hidden='true') &times;
+      div(class='hidden' id='datasets-confirm-modal-action' value="")
       div(class='modal-data' id='datasets-confirm-modal-data') #Data
       div(class='modal-body' id='datasets-confirm-modal-body') #Body
       div(class='modal-footer')
