--- a/views/documents/lib/datasetForm.pug
+++ b/views/documents/lib/datasetForm.pug
@@ -68,7 +68,7 @@ div(id='datasetForm')
       <tr class="custom-row">
         <td>
           <div>Most suitable repositories:</div>
-          <a key="dataset.help" value="http://wiki.dataseer.ai/doku.php" href="http://wiki.dataseer.ai/doku.php" target="_blank">?</a>
+          <a key="dataset.url" value="http://wiki.dataseer.ai/doku.php" href="http://wiki.dataseer.ai/doku.php" target="_blank"><i class="fas fa-question"></i></a>
           <div key="dataset.mostSuitableRepositories" value="undefined">undefined</div>
         </td>
       </tr>
@@ -118,7 +118,7 @@ div(id='datasetForm')
       </tr>
       <tr class="custom-row">
         <td>
-          <button name='datasetForm.refreshDatatypes' class="btn btn-primary btn-sm">Refresh Datatypes <i class="fas fa-sync-alt"></i></button>
+          <button name='datasetForm.refreshDatatypes' class="btn btn-primary btn-sm" loading='false'>Refresh Datatypes <i class="fas fa-sync-alt"></i></button>
         </td>
       </tr>
     </table>
