--- a/views/documents/lib/documentView.pug
+++ b/views/documents/lib/documentView.pug
@@ -7,7 +7,7 @@ div(id='documentView')
   </div>
   <div id ="documentView.screen">
     <div id="documentView.screen.container">
-      <div id="xml" class="hidden"></div>
+      <div id="xml"></div>
       <div id="pdf"></div>
     </div>
   </div>
