--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -15,6 +15,12 @@ block content
             a(href='mailto:?subject='+ encodeURIComponent(mail.subject) + '&body=' + encodeURIComponent(mail.body) target='_blank')
               button.blue.btn.btn-primary.waves-effect.waves-light(type='button' id='getPublicURL' style='margin-left:10px;' title='Send URL by email')
                 <i class="far fa-envelope"></i> Share with colleague
+            if(current_user.role.label === "standard_user")
+              a(href='https://docs.google.com/forms/d/e/1FAIpQLScRVw-GPA-15VVrYFADXJUKByA7SV5oDwv6ynAjOxt2W5QT7A/viewform?usp=sf_link' id='standard_user_feedback_link' target='_blank')
+                button.btn.btn-primary.waves-effect.waves-light.bg-primary(type='button' id='getPublicURL' style='margin-left:10px;' title='Send URL by email') Give feedback about your DataSeer experience
+            else
+              a(href='https://docs.google.com/forms/d/e/1FAIpQLSeURLXaNchVJEawPaiBrC--cM2mXc1zMEcaR4hu8MZyv44nHw/viewform?usp=sf_link' id='annotator_feedback_link' target='_blank')
+                button.btn.btn-primary.waves-effect.waves-light.bg-primary(type='button' id='getPublicURL' style='margin-left:10px;' title='Send URL by email') Annotator feedback
 
     if document.isDataSeer
       
@@ -64,6 +70,20 @@ block content
     else
 
       div(class='row row-margin')
+        div(class='col-12')
+          div(class='key d-inline font-weight-bold') Suggested Data Availability Statement: 
+      
+      div(class='row row-margin')
+        each dataset in document.datasets.current
+          if dataset.DOI && dataset.name
+            div(class='col-12')
+                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: 
+                  a(href=dataset.DOI) #{dataset.DOI}
+          else if dataset.comments && dataset.name
+            div(class='col-12')
+                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: #{dataset.comments}
+
+      div(class='row row-margin')
         if document.metadata.authors.length > 0
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Authors: 
@@ -92,7 +112,7 @@ block content
           div(class='key d-inline font-weight-bold') Submitting Author email: 
           div(class='value d-inline') #{document.metadata.submitting_author_email}
 
-      div(class='row')
+      div(class='row row-margin')
         div(class='col-12')
           div(class='key d-inline font-weight-bold') Datasets:
 
@@ -126,20 +146,6 @@ block content
                 div(class='col-12')
                   div(class='value d-inline') Comments: 
                   div(class='value d-inline') #{dataset.comments}
-
-      div(class='row')
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Suggested Data Availability Statement: 
-      
-      div(class='row row-margin')
-        each dataset in document.datasets.current
-          if dataset.DOI && dataset.name
-            div(class='col-12')
-                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: 
-                  a(href=dataset.DOI) #{dataset.DOI}
-          else if dataset.comments && dataset.name
-            div(class='col-12')
-                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: #{dataset.comments}
 
     div(class='row row-margin')
       div(class='col-12')
