--- a/views/documents/lib/datasetsList.pug
+++ b/views/documents/lib/datasetsList.pug
@@ -8,11 +8,11 @@ div(id='datasetsList')
       <div id="datasetsList.container.bulkActions.newDataset" title="Add new Dataset on the selected sentence">
         <button class="btn btn-primary btn-sm">Add new Dataset <i class="fas fa-plus"></i></button>
       </div>
-      <div id="datasetsList.container.bulkActions.mergeSelection" title="Merge selected Datasets into the current displayed Dataset">
-        <button class="btn btn-primary btn-sm">Merge selection <i class="fas fa-compress-arrows-alt"></i></button>
+      <div id="datasetsList.container.bulkActions.mergeSelection" title="Merge all selected Datasets into the first one">
+        <button class="btn btn-primary btn-sm">Merge selected Datasets <i class="fas fa-compress-arrows-alt"></i></button>
       </div>
       <div id="datasetsList.container.bulkActions.deleteSelection" title="Delete all selected Datasets">
-        <button class="btn btn-danger btn-sm">Delete selection <i class="far fa-trash-alt"></i></button>
+        <button class="btn btn-danger btn-sm">Delete selected Datasets <i class="far fa-trash-alt"></i></button>
       </div>
     </div>
   </div>
