--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -58,7 +58,7 @@ block content
     div(class='col-12')
       include ./lib/datasetsList.pug
     
-  div(class='row' style="height:65%;flex:1 0 auto;")
+  div(class='row' style="height:65vh;flex:1 0 auto;")
     div(class='col-8' style="height:100%; margin-top: 15px;")
       include ./lib/documentView.pug
 
