--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -75,7 +75,6 @@ body {
 #datasetsList #datasetsList\.container\.items\.container {
   cursor: pointer;
   display: table;
-  width: 100%; /*Optional*/
   table-layout: auto; /*Optional*/
   -webkit-border-horizontal-spacing: 85px;
   -webkit-border-vertical-spacing: 10px;
@@ -106,6 +105,7 @@ body {
   position: relative;
   height: 87px;
   min-width: 150px;
+  max-width: 300px;
   text-align: center;
   display: table-cell;
   vertical-align: middle;
