--- a/public/stylesheets/process/finish.css
+++ b/public/stylesheets/process/finish.css
@@ -10,6 +10,33 @@
   margin-bottom: 15px;
 }
 
+.statements-container {
+  font-weight: normal;
+  height: 75px;
+  overflow-y: auto;
+  margin-bottom: 15px;
+}
+
+.datasets-container {
+  font-weight: normal;
+  height: 400px;
+  overflow-y: auto;
+  margin-bottom: 15px;
+}
+
+.datasets-container table {
+  width: 100%;
+}
+
+.datasets-container table th {
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+
+.datasets-container table td {
+  min-width: 125px;
+}
+
 #standard_user_feedback_link,
 #annotator_feedback_link {
   float: right;
