--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -26,152 +26,172 @@ block content
           button.blue.btn.btn-primary.waves-effect.waves-light#refresh_datasets(type='button' title='Refresh datasets informations')
             <i class="fas fa-sync-alt"></i> Refresh datasets
 
-    if document.isDataSeer
-      
-      div(class='row')
-        div(class='col-12') Many thanks for using DataSeer. The Data Accessibility section for your article is below, please paste this into the next version your article.
-
-          div(class='container-fluid')
-
-            div(class='row row-margin')
-              div(class='col-12')
-                div(class='key d-inline') Data Availability Statement: 
-                each dataset in document.datasets.current
-
-                  div(class='row')
-                    div(class='col-12')
-                      if dataset.DOI && dataset.name
-                        div(class='value d-block') #{dataset.name}: 
-                          a(href=dataset.DOI) #{dataset.DOI}
-
-      div(class='row')
-        div(class='col-12') The report below has been sent to the journal Editorial Office:
-          div(class='container-fluid')
-
-            div(class='row')
-              div(class='col-12') Manuscript #: #{document.metadata.manuscript_id}
-
-            div(class='row row-margin')
-              div(class='col-12')
-                div(class='key d-inline') Data Availability Statement: 
-                each dataset in document.datasets.current
-
-                  div(class='row')
-                    div(class='col-12')
-                      if dataset.DOI && dataset.name
-                        div(class='value d-block') #{dataset.name}: 
-                          a(href=dataset.DOI) #{dataset.DOI}
-
-            div(class='row row-margin')
-              div(class='col-12') Author Comments: 
-                each dataset in document.datasets.current
-
-                  div(class='row')
-                    div(class='col-12')
-                      if dataset.comments
-                        div(class='value d-block') #{dataset.name}: #{dataset.comments}
-
-    else
-
-      div(class='row row-margin')
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Suggested Data Availability Statement: 
-      
-      div(class='row row-margin')
+    div(class='row row-margin')
+      div(class='col-12')
+        div(class='key d-inline font-weight-bold') Suggested Data Availability Statement: 
+    
+    div(class='row row-margin')
+      div(class='value d-block authors-container')
         each dataset in document.datasets.current
-          if dataset.DOI && dataset.name
+          if dataset.DOI
             div(class='col-12')
+              if dataset.name
                 div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: 
                   a(href=dataset.DOI) #{dataset.DOI}
-          else if dataset.comments && dataset.name
+              else
+                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.id}: 
+                  a(href=dataset.DOI) #{dataset.DOI}
+          else if dataset.comments
             div(class='col-12')
-                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: #{dataset.comments}
-
-      div(class='row row-margin')
-        if document.metadata.authors.length > 0
-          div(class='col-12')
-            div(class='key d-inline font-weight-bold') Authors: 
-              div(class='value d-block authors-container')
-                ul
-                  each val, index in document.metadata.authors
-                    if val.name
-                      if (val.email)
-                        <li> #{val.name} (<strong>#{val.email}</strong>)
-                      else
-                        li #{val.name}
-                      ul
-                        if val.name && val.affiliations
-                          each aff, index in val.affiliations
-                            li #{aff}
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Title: 
-          div(class='value d-inline') #{document.metadata.article_title}
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Manuscript #: 
-          div(class='value d-inline') #{document.metadata.manuscript_id}
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Submitting Author: 
-          div(class='value d-inline') #{document.metadata.submitting_author}
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Submitting Author email: 
-          div(class='value d-inline') #{document.metadata.submitting_author_email}
-
-      div(class='row row-margin')
-        div(class='col-12')
-          div(class='key d-inline font-weight-bold') Datasets:
-
-      div(class='row')
-        div(class='col-12')
-          div(class='key d-inline')
-          each dataset, index in document.datasets.current
-
-            div(class='row row-margin')
-              div(class='col-12')
-                div(class='value d-block font-weight-bold') Dataset #{index+1}:
-              div(class='col-12')
-                div(class='value d-inline') Data Type: 
-                if dataset.subType !== ''
-                  div(class='value d-inline') #{dataset.dataType} - #{dataset.subType}
-                else
-                  div(class='value d-inline') #{dataset.dataType}
-              div(class='col-12')
-                div(class='value d-inline') Data Sentence: 
-                div(class='value d-inline') #{dataset.text}
               if dataset.name
-                div(class='col-12')
-                  div(class='value d-inline') Dataset name: 
-                  div(class='value d-inline') #{dataset.name}
-              if dataset.DOI
-                div(class='col-12')
-                  div(class='value d-inline') Stable Identifier: 
-                  div(class='value d-inline')
-                    a(href=dataset.DOI) #{dataset.DOI}
-              if dataset.comments
-                div(class='col-12')
-                  div(class='value d-inline') Comments: 
-                  div(class='value d-inline') #{dataset.comments}
+                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: #{dataset.comments}
+              else
+                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.id}: #{dataset.comments}
+          else
+            div(class='col-12')
+              if dataset.name
+                div(class='value d-block' style="margin-bottom: 4px;") #{dataset.name}: Please provide the DOI (or other stable link) or enter any comments (such as a reason why this dataset cannot be shared)
+              else
+                div(class='value d-block' style="margin-bottom: 4px;") ##{dataset.id}: Please provide the DOI (or other stable link) or enter any comments (such as a reason why this dataset cannot be shared)
+
+    div(class='row row-margin')
+      if document.metadata.authors.length > 0
+        div(class='col-12')
+          div(class='key d-inline font-weight-bold') Authors: 
+            div(class='value d-block authors-container')
+              ul
+                each val, index in document.metadata.authors
+                  if val.name
+                    if (val.email)
+                      <li> #{val.name} (<strong>#{val.email}</strong>)
+                    else
+                      li #{val.name}
+                    ul
+                      if val.name && val.affiliations
+                        each aff, index in val.affiliations
+                          li #{aff}
+
+      div(class='col-12')
+        div(class='key d-inline font-weight-bold') Title: 
+        div(class='value d-inline') #{document.metadata.article_title}
+      div(class='col-12')
+        div(class='key d-inline font-weight-bold') Manuscript #: 
+        div(class='value d-inline') #{document.metadata.manuscript_id}
+      div(class='col-12')
+        div(class='key d-inline font-weight-bold') Submitting Author: 
+        div(class='value d-inline') #{document.metadata.submitting_author}
+      div(class='col-12')
+        div(class='key d-inline font-weight-bold') Submitting Author email: 
+        div(class='value d-inline') #{document.metadata.submitting_author_email}
 
     div(class='row row-margin')
       div(class='col-12')
-        div(class='key d-inline font-weight-bold') Datasets deleted:
-        if document.datasets.deleted.length === 0
-          div(class='row row-margin')
-            div(class='col-12')
-              div(class='value d-block') None
-    each dataset in document.datasets.deleted
-      div(class='row row-margin')
+        div(class='key d-inline font-weight-bold') Datasets:
+
+    if document.datasets.current.length === 0
+      div(class='row')
         div(class='col-12')
-          if dataset.dataType
-            div(class='value d-inline') Data Type: 
-            if dataset.subType !== ''
-              div(class='value d-inline') #{dataset.dataType} - #{dataset.subType}
-            else
-              div(class='value d-inline') #{dataset.dataType}
+          div(class='value d-block') None
+    else
+      div(class='row')
         div(class='col-12')
-          if dataset.subType
-            div(class='value d-inline') Data Subtype: 
-            div(class='value d-inline') #{dataset.subType}
+          div(class='value d-block datasets-container')
+            table
+              each dataset, index in document.datasets.current
+                <tr>
+                  <th class='font-weight-bold' colspan='2'>Dataset #{index+1} :</th>
+                </tr>
+                </tr>
+                  <td><i>Dataset Id:</i></td>
+                  <td><i>##{dataset.id}</i></td>
+                </tr>
+                  <td>Dataset Name:</td>
+                  if dataset.name
+                    <td>#{dataset.name}</td>
+                  else
+                    <td>Please provide a name to this dataset</td>
+                </tr>
+                </tr>
+                  <td>Data Type:</td>
+                  if dataset.subType !== ''
+                    <td>#{dataset.dataType} - #{dataset.subType}</td>
+                  else
+                    <td>#{dataset.dataType}</td>
+                </tr>
+                </tr>
+                  <td>Data Sentence:</td>
+                  if dataset.text
+                    <td>#{dataset.text}</td>
+                  else
+                    <td>n/a</td>
+                </tr>
+                </tr>
+                  <td>Stable Identifier:</td>
+                  if dataset.DOI
+                    <td>
+                      a(href=dataset.DOI) #{dataset.DOI}
+                    </td>
+                  else
+                    <td>Please provide the DOI (or other stable link) to this dataset</td>
+                </tr>
+                </tr>
+                  <td>Comments:</td>
+                  if dataset.comments
+                    <td>#{dataset.comments}</td>
+                  else
+                    <td>Please enter any comments (such as a reason why this dataset cannot be shared)</td>
+                </tr>
+
+    div(class='row row-margin')
+      div(class='col-12')
+        div(class='key d-inline font-weight-bold') Deleted Datasets:
+
+    if document.datasets.deleted.length === 0
+      div(class='row')
         div(class='col-12')
-          if dataset.text
-            div(class='value d-inline') Data Sentence: 
-            div(class='value d-inline') #{dataset.text}
+          div(class='value d-block') None
+    else
+      div(class='row')
+        div(class='col-12')
+          div(class='value d-block datasets-container')
+            table
+              each dataset, index in document.datasets.deleted
+                <tr>
+                  <th class='font-weight-bold' colspan='2'>Dataset #{index+1} :</th>
+                </tr>
+                  <td>Dataset Name:</td>
+                  if dataset.name
+                    <td>#{dataset.name}</td>
+                  else
+                    <td>n/a</td>
+                </tr>
+                </tr>
+                  <td>Data Type:</td>
+                  if dataset.subType !== ''
+                    <td>#{dataset.dataType} - #{dataset.subType}</td>
+                  else
+                    <td>#{dataset.dataType}</td>
+                </tr>
+                </tr>
+                  <td>Data Sentence:</td>
+                  if dataset.text
+                    <td>#{dataset.text}</td>
+                  else
+                    <td>n/a</td>
+                </tr>
+                </tr>
+                  <td>Stable Identifier:</td>
+                  if dataset.DOI
+                    <td>
+                      a(href=dataset.DOI) #{dataset.DOI}
+                    </td>
+                  else
+                    <td>n/a</td>
+                </tr>
+                </tr>
+                  <td>Comments:</td>
+                  if dataset.comments
+                    <td>#{dataset.comments}</td>
+                  else
+                    <td>n/a</td>
+                </tr>
