--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -31,7 +31,7 @@ block content
         div(class='key d-inline font-weight-bold') Suggested Data Availability Statement: 
     
     div(class='row row-margin')
-      div(class='value d-block authors-container')
+      div(class='value d-block statements-container')
         each dataset in document.datasets.current
           if dataset.DOI
             div(class='col-12')
